dolfinx/0.1.0a1/python/_sources/generated/dolfinx.cpp.mesh.rst.txt
dolfinx.cpp.mesh
================

.. automodule:: dolfinx.cpp.mesh

   
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
   
      build_dual_graph
      cell_dim
      cell_entity_type
      cell_normals
      cell_num_entities
      cell_num_vertices
      compute_boundary_facets
      compute_connectivity
      compute_entities
      create_mesh
      create_meshtags
      entities_to_geometry
      exterior_facet_indices
      extract_topology
      get_entity_vertices
      h
      is_simplex
      locate_entities
      locate_entities_boundary
      midpoints
      partition_cells_graph
      to_string
      to_type
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
   
      CellType
      Geometry
      GhostMode
      Mesh
      MeshTags_double
      MeshTags_int32
      MeshTags_int64
      MeshTags_int8
      Topology
   
   

   
   
   



