dolfinx/v0.4.1/python/_sources/generated/dolfinx.cpp.mesh.rst.txt
dolfinx.cpp.mesh
================

.. automodule:: dolfinx.cpp.mesh

   
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
   
      build_dual_graph
      cell_dim
      cell_entity_type
      cell_normals
      cell_num_entities
      cell_num_vertices
      compute_boundary_facets
      compute_connectivity
      compute_entities
      compute_incident_entities
      compute_midpoints
      create_box
      create_cell_partitioner
      create_interval
      create_mesh
      create_meshtags
      create_rectangle
      create_submesh
      entities_to_geometry
      exterior_facet_indices
      extract_topology
      get_entity_vertices
      h
      is_simplex
      locate_entities
      locate_entities_boundary
      to_string
      to_type
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
   
      CellType
      DiagonalType
      Geometry
      GhostMode
      Mesh
      MeshTags_float64
      MeshTags_int32
      MeshTags_int64
      MeshTags_int8
      Topology
   
   

   
   
   



